--- a/index.html
+++ b/index.html
@@ -2,9 +2,9 @@
 <!-- The license of this page is Apache License 2.0 (http://www.apache.org/licenses/LICENSE-2.0) -->
 <head>
 	<title>Telegram Bot Messenger</title>
-	<link href='https://fonts.googleapis.com/css?family=Roboto' rel='stylesheet'>
-	<meta name='viewport' content='width=device-width, initial-scale=1'>
-	<style type='text/css'>
+	<meta name="viewport" content="width=device-width, initial-scale=1">
+	<link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
+	<style type="text/css">
 		body {
 			font-family: 'Roboto', sans-serif;
 			margin: 40px auto;
@@ -18,47 +18,48 @@
 			font-family: 'Roboto', sans-serif;
 			line-height: 1.2;
 		}
-		a {
-			color: #444;
-		}
-		a:hover {
-			color: #000;
-		}
 	</style>
 </head>
 <body>
-	<h1>Telegram Bot Messenger</h1>
-	<p>This page will allow you to send a message to a user/group through a Telegram bot. Just enter your bot token from <a href='https://telegram.me/botfather'>BotFather</a> and press 'Send Message'.</p>
-	<p>Based on <a href='https://github.com/nadam/playground'>@nadam's Bot API Playground</a>, this page is aimed at users who have little programming experience, if any.</p>
-	<p>The source code of this website is also <a href='https://github.com/matthewhesketh/playground'>available on Github</a>.</p><br>
-	<label for='token'>Bot token<br></label>
-	<input id='token' type='text' /><br><br>
-	<label for='message'>Message<br></label>
-	<input id='message' type='text' maxlength='4096'/><br><br>
-	<label for='chat'>Numerical User/Group ID<br></label>
-	<input id='chat' type='text' /><br><br>
-	<button id='sendMessage' type='button' onclick='sendMessage()'>Send</button><br><br>
-	<p id='output'></p>
+	<h1>Bot API Playground</h1>
+	<p>This page will allow you to send a message to a user/group through a Telegram bot. Just enter your bot token from <a href="https://telegram.me/botfather">BotFather</a> and press 'Send Message'.</p>
+	<p>Based on <a href="https://github.com/nadam/playground">@nadam's Bot API Playground</a>, this page is aimed at users who have little programming experience, if any.</p>
+	<p>The source code of this website is also <a href="https://github.com/matthewhesketh/playground">available on Github</a>.
+	<br><br>
+	<form>
+		<fieldset>
+			<legend>Enter required information:</legend>
+			<label for="token">Bot token</label><br>
+			<input id="token" type="text" placeholder="Paste your bot token from @BotFather here" size="45" maxsize="45" required/><br><br>
+			<label for="input">Message</label><br>
+			<input id="input" type="text" placeholder="Text you want to send" required/><br><br>
+			<label for="chat">Numerical ID of user/group</label><br>
+			<input id="chat" type="text" placeholder="Numerical ID of the user/group you want to send the message to" required/><br><br>
+			<input id="startStop" type="submit" onclick="sendMessage()" value="Send Message">
+		</fieldset>
+	</form><br><br>
 	<script>
-		var onUpdate = document.getElementById('onUpdate');
-		var sendMessage = document.getElementById('sendMessage');
+		var onUpdate = document.getElementById("onUpdate");
+		var output = document.getElementById("output");
+		var startStop = document.getElementById("startStop");
 		var running = false;
 		var botUrl;
-		var xhr;
+		var xhr; // XMLHttpRequest
+		var botName = "Bot";
 		function sendMessage() {
-			var token = document.getElementById('token').value;
-			var message = document.getElementById('message').value;
-			var chat = document.getElementById('chat').value;
-			botUrl = 'https://api.telegram.org/bot' + token + '/';
-			call('sendMessage', {
+			var token = document.getElementById("token").value;
+			var input = document.getElementById("input").value;
+			var chat = document.getElementById("chat").value;
+			botUrl = "https://api.telegram.org/bot" + token + "/";
+			call("sendMessage", {
 				chat_id: chat,
-				text: message,
+				text: input,
 			});
 		}
 		function call(method, params, onResponse, onError, timeout) {
 			xhr = new XMLHttpRequest();
-			xhr.open('POST', botUrl + method);
-			xhr.setRequestHeader('Content-type', 'application/json');
+			xhr.open("POST", botUrl + method);
+			xhr.setRequestHeader("Content-type", "application/json");
 			xhr.onload = function () {
 				if (xhr.responseText) {
 					var response = JSON.parse(xhr.responseText);
@@ -67,7 +68,7 @@
 							onResponse(response.result);
 						}
 					} else {
-						onError(response.error_code, method + ': ' + response.description);
+						onError(response.error_code, method + ": " + response.description);
 					}
 				}
 			};
@@ -75,12 +76,12 @@
 				if (e) {
 					onError(-1, e);
 				} else {
-					onError(-1, 'No connection');
+					onError(-1, "No connection");
 				}
 			};
 			xhr.timeout = timeout ? timeout * 1000 : 15000;
 			xhr.ontimeout = function() {
-				onError(-1, 'Timeout');
+				onError(-1, "Timeout");
 			};
 			xhr.send(JSON.stringify(params));
 		}
